--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,31 +1,21 @@
 button,
 .button {
-	// @include font-primary-bold;
+	@include font-primary;
 	@include type((
-		font-size: 12px,
+		font-size: 16px,
 		line-height: 19px
 	));
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border-radius: 24px;
+	border-radius: 3px;
 	min-width: 100px;
 	min-height: 36px;
-	// color: $color-dark-gray-1;
-	border-width: 1px;
-	border-style: solid;
-	border-color: transparent;
 	cursor: pointer;
 	background-color: transparent;
 	-webkit-appearance: none;
-	transition: background-color .3s,
-							border-color .3s;
-
-	@include from(large) {
-		font-size: 18px;
-		min-width: 145px;
-		min-height: 40px;
-	}
+	border: 0;
+	transition: background-color .3s;
 }
 
 .button--text {
@@ -39,14 +29,14 @@ button,
 
 /* COLOR VARIATIONS */
 
-.button--dark-gray {
-	// color: $color-white;
-	// background-color: $color-dark-gray-1;
-	// border-color: $color-dark-gray-1;
+.button--cyan {
+	color: $color-white;
+	background-color: $color-cyan-2;
+	box-shadow: 0 1px 2px 0 rgba(16, 22, 26, 0.2), 0 0 0 1px #1F6B9A, inset 0 0 0 1px rgba(16, 22, 26, 0.4), inset 0 -1px 1px 0 rgba(16, 22, 26, 0.2);
 
 	&.button--outline {
 		// color: $color-dark-gray-1;
-		background-color: transparent;
+		// background-color: transparent;
 	}
 }
 
