--- a/src/sass/pages/_login.scss
+++ b/src/sass/pages/_login.scss
@@ -9,7 +9,6 @@
 	align-items: center;
 	flex-wrap: wrap;
 	min-height: 100vh;
-	padding: 20px;
 	background-color: $color-cyan-1;
 
 	&__logo {
@@ -34,6 +33,11 @@
 	&__content {
 		width: 100%;
 		max-width: 600px;
+	}
+
+	form {
+		max-width: 300px;
+		margin: auto;
 	}
 
 	&__form-footer {
