--- a/src/templates/pages/login.twig
+++ b/src/templates/pages/login.twig
@@ -10,7 +10,6 @@
 			<div class="login__tagline">For cool people only <span class="login__tagline-emoji">😎</span></div>
 		</div>
 		<div class="login__content">
-			<p class="form-copy">Login</p>
 			<form action="/" method="post">
 				<div class="input-block">
 					<label for="email">Username</label>
@@ -20,7 +19,7 @@
 					<label for="password">Password</label>
 					<input type="password" id="password">
 				</div>
-				<button class="button button--teal" type="submit">Log In</button>
+				<button class="button button--cyan" type="submit">Log In</button>
 			</form>
 		</div>
 	</div>
