Admin layout initial styles

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,7 @@
 $color-white: #FFF;
 $color-black: #000;
 
+$color-gray-1: #979797;
 $color-dark-gray-1: #182026;
 $color-cyan-1: #D3FEFF;
 $color-cyan-2: #00C9CC;
