--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,10 +11,14 @@
 // COMPONENTS
 @import "components/buttons";
 @import "components/form";
+@import "components/admin-nav";
 
 // BLOCKS
 @import "components/header";
 @import "components/footer";
+
+// LAYOUTS
+@import "layouts/admin";
 
 // PAGES
 @import "pages/login";
