--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,6 +2,8 @@ $color-white: #FFF;
 $color-black: #000;
 
 $color-gray-1: #979797;
+$color-gray-2: #F5F8FA;
+$color-gray-3: #5C7080;
 $color-dark-gray-1: #182026;
 $color-cyan-1: #D3FEFF;
 $color-cyan-2: #00C9CC;
