Refactor dashboard-header

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/form";
 @import "components/custom-select";
 @import "components/admin-nav";
+@import "components/dashboard-header";
 
 // BLOCKS
 @import "components/header";
