--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/custom-select";
 @import "components/admin-nav";
 @import "components/dashboard-header";
+@import "components/dashboard-cards";
 
 // BLOCKS
 @import "components/header";
