--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/admin-nav";
 @import "components/dashboard-header";
 @import "components/dashboard-cards";
+@import "components/dashboard-chart";
 
 // BLOCKS
 @import "components/header";
