--- a/src/sass/components/_admin-nav.scss
+++ b/src/sass/components/_admin-nav.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex-shrink: 0;
 	width: 90px;
 	border-right: 1px solid rgba($color-gray-1, .11);
 
