--- a/src/templates/pages/dashboard.twig
+++ b/src/templates/pages/dashboard.twig
@@ -9,4 +9,5 @@
 {% block admin_contents %}
 	{% include '@templates/components/dashboard-header.twig' %}
 	{% include '@templates/components/dashboard-cards.twig' %}
+	{% include '@templates/components/dashboard-chart.twig' %}
 {% endblock %} {# Ends admin_contents block #}
