Create Trip initial layout and styles

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -5,7 +5,7 @@ button,
 		font-size: 16px,
 		line-height: 19px
 	));
-	display: flex;
+	display: inline-flex;
 	justify-content: center;
 	align-items: center;
 	border-radius: 3px;
@@ -33,19 +33,10 @@ button,
 	color: $color-white;
 	background-color: $color-cyan-2;
 	box-shadow: 0 1px 2px 0 rgba(16, 22, 26, 0.2), 0 0 0 1px #1F6B9A, inset 0 0 0 1px rgba(16, 22, 26, 0.4), inset 0 -1px 1px 0 rgba(16, 22, 26, 0.2);
-
-	&.button--outline {
-		// color: $color-dark-gray-1;
-		// background-color: transparent;
-	}
 }
 
-.button--blue {
-	// color: $color-white;
-	// background-color: $color-blue-2;
-	// border-color: $color-blue-2;
-
-	&:hover {
-		// background-color: darken($color-blue-2, 5%);
-	}
+.button--white {
+	color: $color-dark-gray-1;
+	background-color: $color-gray-2;
+	box-shadow: 0 1px 2px 0 rgba(16, 22, 26, 0.1), 0 0 0 1px rgba(16, 22, 26, 0.15), inset 0 0 0 1px rgba(16, 22, 26, 0.2), inset 0 -1px 1px 0 rgba(16, 22, 26, 0.1);
 }
