--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/dashboard-header";
 @import "components/dashboard-cards";
 @import "components/dashboard-chart";
+@import "components/create-trip-header";
 
 // BLOCKS
 @import "components/header";
