Create Trip form fields

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,8 @@
 @import "components/dashboard-cards";
 @import "components/dashboard-chart";
 @import "components/create-trip-header";
+@import "components/create-trip-form";
+@import "components/trip-stops";
 
 // BLOCKS
 @import "components/header";
