--- a/src/templates/pages/create-trip.twig
+++ b/src/templates/pages/create-trip.twig
@@ -7,6 +7,8 @@
 {% set active_nav_name = 'map' %}
 
 {% block admin_contents %}
-	{% include '@templates/components/create-trip-header.twig' %}
-	{% include '@templates/components/create-trip-form.twig' %}
+	<form class="create-trip" action="/" method="post">
+		{% include '@templates/components/create-trip-header.twig' %}
+		{% include '@templates/components/create-trip-form.twig' %}
+	</form>
 {% endblock %} {# Ends admin_contents block #}
