--- a/src/sass/components/_trip-stops.scss
+++ b/src/sass/components/_trip-stops.scss
@@ -29,6 +29,7 @@
 		position: relative;
 		border-radius: 3px;
 		box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+		overflow: hidden;
 
 		&::before {
 			content: '';
@@ -86,6 +87,50 @@
 			min-width: 0;
 			margin-left: auto;
 			margin-right: 0;
+
+			&:focus ~ .trip-stops__card-tooltip {
+				display: block;
+			}
+		}
+
+		&-tooltip {
+			display: none;
+			min-width: 200px;
+			position: absolute;
+			top: -10px;
+			right: 32px;
+			background-color: $color-white;
+			border-radius: 3px;
+
+			&::before {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 18px;
+				left: 100%;
+				border-top: 10px solid transparent;
+				border-bottom: 10px solid transparent;
+				border-left: 10px solid $color-white;
+			}
+
+			button {
+				@include font-primary;
+				@include type((
+					font-size: 16px,
+					line-height: 20px,
+				));
+				display: block;
+				padding: 10px;
+				text-align: left;
+
+				&:not(:first-child) {
+					margin-top: 10px;
+				}
+
+				&[data-action="delete"] {
+					color: $color-red;
+				}
+			}
 		}
 
 		&-headings {
