--- a/src/templates/components/trip-stops.twig
+++ b/src/templates/components/trip-stops.twig
@@ -27,7 +27,11 @@
 				<div class="trip-stops__card-content">
 					<div class="trip-stops__card-number">{{ loop.index }}</div>
 					<button class="trip-stops__card-controls" type="button"></button>
-					<div class="trip-stops__card-tooltip"></div>
+					<div class="trip-stops__card-tooltip">
+						<button class="trip-stops__card-tooltip__button" type="button" data-action="edit">Edit</button>
+						<button class="trip-stops__card-tooltip__button" type="button" data-action="hide">Hide</button>
+						<button class="trip-stops__card-tooltip__button" type="button" data-action="delete">Delete</button>
+					</div>
 					<div class="trip-stops__card-headings">
 						<h3 class="trip-stops__card-heading">{{ card.heading }}</h3>
 						<p class="trip-stops__card-subheading">{{ card.subheading }}</p>
