Trip Stops Grid

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/buttons";
 @import "components/form";
 @import "components/custom-select";
+@import "components/modal";
 @import "components/admin-nav";
 @import "components/dashboard-header";
 @import "components/dashboard-cards";
@@ -19,6 +20,7 @@
 @import "components/create-trip-header";
 @import "components/create-trip-form";
 @import "components/trip-stops";
+@import "components/trip-stops-modal";
 
 // BLOCKS
 @import "components/header";
