--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -27,7 +27,10 @@ form {
 .input-block {
 	width: 100%;
 	text-align: left;
-	margin-top: 30px;
+	
+	&:not(:first-child) {
+		margin-top: 30px;
+	}
 
 	&--inline {
 		display: inline-flex;
@@ -91,5 +94,21 @@ form {
 				opacity: 1;
 			}
 		}
+	}
+
+	textarea {
+		@include font-primary;
+		@include type((
+			font-size: 16px,
+			line-height: 20px,
+		));
+		display: block;
+		width: 100%;
+		padding: 0 20px;
+		border-radius: 3px;
+		-webkit-appearance: none;
+		box-shadow: inset 0 1px 1px 0 rgba(16, 22, 26, 0.2), inset 0 0 0 1px rgba(16, 22, 26, 0.15);
+		border: 0;
+		padding: 10px;
 	}
 }
