--- a/src/sass/components/_trip-stops.scss
+++ b/src/sass/components/_trip-stops.scss
@@ -1,9 +1,12 @@
 .trip-stops {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-auto-rows: 1fr;
-	grid-gap: 32px;
 	margin-top: 16px;
+
+	&__grid {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-auto-rows: 1fr;
+		grid-gap: 32px;
+	}
 
 	&__aspect-ratio {
 		padding-top: calc(100% * (210 / 250));
@@ -16,7 +19,7 @@
 		border-radius: 3px;
 		box-shadow: 0 8px 24px 0 rgba(16, 22, 26, 0.2), 0 2px 4px 0 rgba(16, 22, 26, 0.2), 0 0 0 1px rgba(16, 22, 26, 0.1);
 
-		&-text {
+		&-button {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -29,7 +32,6 @@
 		position: relative;
 		border-radius: 3px;
 		box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
-		overflow: hidden;
 
 		&::before {
 			content: '';
@@ -52,6 +54,8 @@
 			height: 100%;
 			z-index: 1;
 			object-fit: cover;
+			border-radius: 3px;
+			overflow: hidden;
 		}
 
 		&-content {
@@ -87,10 +91,6 @@
 			min-width: 0;
 			margin-left: auto;
 			margin-right: 0;
-
-			&:focus ~ .trip-stops__card-tooltip {
-				display: block;
-			}
 		}
 
 		&-tooltip {
@@ -101,6 +101,10 @@
 			right: 32px;
 			background-color: $color-white;
 			border-radius: 3px;
+
+			.trip-stops__card--expanded & {
+				display: block;
+			}
 
 			&::before {
 				content: '';
