--- a/src/templates/components/trip-stops.twig
+++ b/src/templates/components/trip-stops.twig
@@ -1,46 +1,33 @@
-{% set cards = [
-	{
-		position: 1,
-		heading: 'Burger Joint',
-		subheading: '35 Powell St, San Francisco, CA 94102, USA',
-		image: 'https://picsum.photos/300/200'
-	},
-	{
-		position: 2,
-		heading: 'Burger Joint',
-		subheading: '35 Powell St, San Francisco, CA 94102, USA',
-		image: 'https://picsum.photos/301/201'
-	},
-] %}
-
 <div class="trip-stops">
-	<div class="trip-stops__add">
-		<div class="trip-stops__aspect-ratio">
-			<button class="trip-stops__add-text" type="button">
-				Add Stop
-			</button>
+	<div class="trip-stops__grid">
+		<div class="trip-stops__add">
+			<div class="trip-stops__aspect-ratio">
+				<button class="trip-stops__add-button" type="button">
+					Add Stop
+				</button>
+			</div>
 		</div>
 	</div>
 
-	{% for card in cards %}
-		<div class="trip-stops__card">
-			<div class="trip-stops__aspect-ratio">
-				<img class="trip-stops__card-image" src="{{ card.image }}" alt="">
-				<div class="trip-stops__card-content">
-					<div class="trip-stops__card-number">{{ card.position }}</div>
-					<button class="trip-stops__card-controls" type="button"></button>
-					<div class="trip-stops__card-tooltip">
-						<button class="trip-stops__card-tooltip__button" type="button" data-action="edit">Edit</button>
-						<button class="trip-stops__card-tooltip__button" type="button" data-action="hide">Hide</button>
-						<button class="trip-stops__card-tooltip__button" type="button" data-action="delete">Delete</button>
-					</div>
-					<div class="trip-stops__card-headings">
-						<h3 class="trip-stops__card-heading">{{ card.heading }}</h3>
-						<p class="trip-stops__card-subheading">{{ card.subheading }}</p>
-					</div>
+	<div class="trip-stops__card trip-stops__card-template" hidden>
+		<div class="trip-stops__aspect-ratio">
+			<img class="trip-stops__card-image" src="https://picsum.photos/300/200" alt="">
+			<div class="trip-stops__card-content">
+				<div class="trip-stops__card-number"></div>
+				<button class="trip-stops__card-controls" type="button"></button>
+				<div class="trip-stops__card-tooltip">
+					<button class="trip-stops__card-tooltip__button" type="button" data-action="edit">Edit</button>
+					<button class="trip-stops__card-tooltip__button" type="button" data-action="hide">Hide</button>
+					<button class="trip-stops__card-tooltip__button" type="button" data-action="delete">Delete</button>
+				</div>
+				<div class="trip-stops__card-headings">
+					<h3 class="trip-stops__card-heading"></h3>
+					<p class="trip-stops__card-subheading"></p>
 				</div>
 			</div>
 		</div>
-	{% endfor %}
+	</div>
+
+	{% include '@templates/components/trip-stops-modal.twig' %}
 
 </div>
