View Trip Initial template

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import "components/create-trip-form";
 @import "components/trip-stops";
 @import "components/trip-stops-modal";
+@import "components/view-trip-header";
 
 // BLOCKS
 @import "components/header";
