View Trip Details

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import "components/trip-stops";
 @import "components/trip-stops-modal";
 @import "components/view-trip-header";
+@import "components/view-trip-details";
 
 // BLOCKS
 @import "components/header";
