--- a/src/templates/pages/view-trip.twig
+++ b/src/templates/pages/view-trip.twig
@@ -10,5 +10,6 @@
 	<form class="create-trip" action="/" method="post">
 		{% include '@templates/components/view-trip-header.twig' %}
 		{% include '@templates/components/view-trip-details.twig' %}
+		{% include '@templates/components/view-trip-stops.twig' %}
 	</form>
 {% endblock %} {# Ends admin_contents block #}
