--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import "components/trip-stops-modal";
 @import "components/view-trip-header";
 @import "components/view-trip-details";
+@import "components/view-trip-stops";
 
 // BLOCKS
 @import "components/header";
