--- a/src/templates/components/create-trip-header.twig
+++ b/src/templates/components/create-trip-header.twig
@@ -1,5 +1,5 @@
 <div class="create-trip-header">
-	<h1 class="admin__heading">Create</h1>
+	<h1 class="admin__heading">{{ title }}</h1>
 	<div class="create-trip-header__actions">
 		<button type="reset" class="button--white">Cancel</button>
 		<button type="submit" class="button--cyan">Save</button>
