--- a/src/templates/components/view-trip-stops.twig
+++ b/src/templates/components/view-trip-stops.twig
@@ -30,6 +30,6 @@
 <div class="view-trip-stops">
 	<div class="input-block">
 		<label>Stops</label>
-		{% include '@templates/components/trip-stops.twig' with { stops: stops } %}
+		{% include '@templates/components/trip-stops.twig' with { stops: stops } only %}
 	</div>
 </div>
