--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import "components/view-trip-header";
 @import "components/view-trip-details";
 @import "components/view-trip-stops";
+@import "components/places-header";
 
 // BLOCKS
 @import "components/header";
