--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,7 @@
 @import "components/view-trip-details";
 @import "components/view-trip-stops";
 @import "components/places-header";
+@import "components/places-list";
 
 // BLOCKS
 @import "components/header";
