--- a/src/templates/pages/places.twig
+++ b/src/templates/pages/places.twig
@@ -9,5 +9,6 @@
 {% block admin_contents %}
 	<div class="places">
 		{% include '@templates/components/places-header.twig' %}
+		{% include '@templates/components/places-list.twig' %}
 	</div>
 {% endblock %} {# Ends admin_contents block #}
