--- a/src/sass/components/_trip-stops.scss
+++ b/src/sass/components/_trip-stops.scss
@@ -2,10 +2,11 @@
 	margin-top: 16px;
 
 	&__grid {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-auto-rows: 1fr;
-		grid-gap: 32px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: flex-start;
+		width: calc(100% + 30px);
 	}
 
 	&__aspect-ratio {
@@ -14,10 +15,13 @@
 	}
 
 	&__add {
+		width: 250px;
 		position: relative;
 		background-color: $color-white;
 		border-radius: 3px;
 		box-shadow: 0 8px 24px 0 rgba(16, 22, 26, 0.2), 0 2px 4px 0 rgba(16, 22, 26, 0.2), 0 0 0 1px rgba(16, 22, 26, 0.1);
+		margin-right: 30px;
+		margin-bottom: 30px;
 
 		&-button {
 			position: absolute;
@@ -29,9 +33,12 @@
 	}
 
 	&__card {
+		width: 250px;
 		position: relative;
 		border-radius: 3px;
 		box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+		margin-right: 30px;
+		margin-bottom: 30px;
 
 		&::before {
 			content: '';
